# Particle_Sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
analysis/: analyze_output.py
cmake/: ParticleSimBuildModule.cmake  config.cmake  test_macro_and_funcs.cmake  x86_64-w64-mingw32.cmake
graphic_helpers/: CMakeLists.txt
graphic_helpers/inc/: graphic_helpers.h
graphic_helpers/shaders/: fs.frag.glsl  rasterization.vert.glsl  time_evolution.comp.glsl  vs.vert.glsl
graphic_helpers/src/: graphic_helpers.c
inc/: common.h
mechanics/: CMakeLists.txt
mechanics/inc/: mechanics.h  particle.h
mechanics/src/: mechanics.c  particle.c
mechanics/unit_tests/: test_mechanics.c  test_particle.c
particle_sim/: CMakeLists.txt
particle_sim/inc/: graphic_helpers.h  mechanic_equations.h  mechanics.h  particle.h  particle_sim.h  vector.h  vector_3d.h
particle_sim/shaders/: vs.vert
particle_sim/src/: callbacks.c  graphic_helpers.c  init_functions.c  mechanic_equations.c  mechanics.c  particle.c  particle_sim.c  vector.c  vector_3d.c
